# ZeroStudio-Android-Tree-Sitter

./: README.md  build.gradle.kts  git  settings.gradle
android-tree-sitter/: build.gradle.kts
app/: build.gradle.kts
grammars/: grammars.json
grammars/arm/: CMakeLists.txt  Cargo.toml  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
grammars/arm/bindings/c/: tree-sitter-arm.h  tree-sitter-arm.pc.in
grammars/arm/bindings/go/: binding.go  binding_test.go
grammars/arm/bindings/node/: binding.cc  index.js
grammars/arm/bindings/python/tests/: test_binding.py
grammars/arm/bindings/python/tree_sitter_arm/: __init__.py  binding.c
grammars/arm/bindings/rust/: build.rs  lib.rs
grammars/arm/bindings/swift/TreeSitterArmTests/: TreeSitterArmTests.swift
grammars/arm/src/: grammar.json  node-types.json  parser.c
grammars/arm/test/corpus/: comment.txt  directive.txt  reg.txt
grammars/bash/: package.json
grammars/bash/src/: grammar.json  node-types.json
grammars/cmake/src/: grammar.json  node-types.json  parser.c
grammars/flutter/: pubspec.yaml
grammars/flutter/example/: .gitignore  pubspec.yaml
grammars/flutter/example/integration_test/: lib_test.dart
grammars/groovy/: grammar.js  package-lock.json  package.json
grammars/groovy/src/: grammar.json
grammars/markdown/: CMakeLists.txt  README.md
grammars/plsql/: build-constants.js  grammar.js  package.json
grammars/plsql/grammar/: expression.cjs  operator.cjs
grammars/plsql/src/: grammar.json  node-types.json
(+11 files in other folders)
